kafka-cluster-kafka-exporter.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: '1'
  generation: 1
  labels:
    app.kubernetes.io/instance: kafka-cluster
    app.kubernetes.io/managed-by: strimzi-cluster-operator
    app.kubernetes.io/name: strimzi
    app.kubernetes.io/part-of: strimzi-kafka-cluster
    strimzi.io/cluster: kafka-cluster
    strimzi.io/kind: Kafka
    strimzi.io/name: kafka-cluster-kafka-exporter
  name: kafka-cluster-kafka-exporter
  namespace: amq-kafka-dev
  ownerReferences:
    - apiVersion: kafka.strimzi.io/v1beta1
      blockOwnerDeletion: false
      controller: false
      kind: Kafka
      name: kafka-cluster
      uid: 1c56e00c-dda3-11ea-a9b2-005056b0841c
  resourceVersion: '622835062'
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      strimzi.io/cluster: kafka-cluster
      strimzi.io/kind: Kafka
      strimzi.io/name: kafka-cluster-kafka-exporter
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      annotations:
        strimzi.io/cluster-ca-cert-generation: '0'
      creationTimestamp: null
      labels:
        app.kubernetes.io/instance: kafka-cluster
        app.kubernetes.io/managed-by: strimzi-cluster-operator
        app.kubernetes.io/name: strimzi
        app.kubernetes.io/part-of: strimzi-kafka-cluster
        strimzi.io/cluster: kafka-cluster
        strimzi.io/kind: Kafka
        strimzi.io/name: kafka-cluster-kafka-exporter
    spec:
      containers:
        - command:
            - /opt/kafka-exporter/kafka_exporter_run.sh
          image: 'registry.redhat.io/amq7/amq-streams-kafka-24-rhel7:1.4.1'
          imagePullPolicy: IfNotPresent
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /metrics
              port: prometheus
              scheme: HTTP
            initialDelaySeconds: 15
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 5
          name: kafka-cluster-kafka-exporter
          ports:
            - containerPort: 9404
              name: prometheus
              protocol: TCP
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /metrics
              port: prometheus
              scheme: HTTP
            initialDelaySeconds: 15
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 5
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          volumeMounts:
            - mountPath: /etc/kafka-exporter/kafka-exporter-certs/
              name: kafka-exporter-certs
            - mountPath: /etc/kafka-exporter/cluster-ca-certs/
              name: cluster-ca-certs
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      serviceAccount: kafka-cluster-kafka-exporter
      serviceAccountName: kafka-cluster-kafka-exporter
      terminationGracePeriodSeconds: 30
      volumes:
        - name: kafka-exporter-certs
          secret:
            defaultMode: 288
            secretName: kafka-cluster-kafka-exporter-certs
        - name: cluster-ca-certs
          secret:
            defaultMode: 288
            secretName: kafka-cluster-cluster-ca-cert
status:
  availableReplicas: 1
  conditions:
    - lastTransitionTime: '2021-02-02T15:36:50Z'
      lastUpdateTime: '2021-02-02T15:37:24Z'
      message: >-
        ReplicaSet "kafka-cluster-kafka-exporter-7466f78697" has successfully
        progressed.
      reason: NewReplicaSetAvailable
      status: 'True'
      type: Progressing
    - lastTransitionTime: '2021-02-02T21:33:14Z'
      lastUpdateTime: '2021-02-02T21:33:14Z'
      message: Deployment has minimum availability.
      reason: MinimumReplicasAvailable
      status: 'True'
      type: Available
  observedGeneration: 1
  readyReplicas: 1
  replicas: 1
  updatedReplicas: 1
