prometheus-operator.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: '2'
    kubectl.kubernetes.io/last-applied-configuration: >
      {"apiVersion":"extensions/v1beta1","kind":"Deployment","metadata":{"annotations":{},"labels":{"k8s-app":"prometheus-operator"},"name":"prometheus-operator","namespace":"amq-kafka-dev"},"spec":{"progressDeadlineSeconds":600,"replicas":1,"revisionHistoryLimit":10,"selector":{"matchLabels":{"k8s-app":"prometheus-operator"}},"strategy":{"rollingUpdate":{"maxSurge":"25%","maxUnavailable":"25%"},"type":"RollingUpdate"},"template":{"metadata":{"labels":{"k8s-app":"prometheus-operator"}},"spec":{" [...]
  creationTimestamp: '2021-02-02T14:54:09Z'
  generation: 2
  labels:
    k8s-app: prometheus-operator
  name: prometheus-operator
  namespace: amq-kafka-dev
  resourceVersion: '622281311'
  selfLink: /apis/apps/v1/namespaces/amq-kafka-dev/deployments/prometheus-operator
  uid: 8193d819-6566-11eb-85b1-005056b01184
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      k8s-app: prometheus-operator
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        k8s-app: prometheus-operator
    spec:
      containers:
        - args:
            - '--manage-crds=false'
            - '--namespaces=amq-kafka-dev'
            - '--logtostderr=true'
            - '--config-reloader-image=quay.io/coreos/configmap-reload:v0.0.1'
            - >-
              --prometheus-config-reloader=quay.io/coreos/prometheus-config-reloader:v0.29.0
          image: 'quay.io/coreos/prometheus-operator:v0.29.0'
          imagePullPolicy: IfNotPresent
          name: prometheus-operator
          ports:
            - containerPort: 8080
              name: http
              protocol: TCP
          resources:
            limits:
              cpu: 400m
              memory: 512Mi
            requests:
              cpu: 100m
              memory: 100Mi
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      serviceAccount: prometheus
      serviceAccountName: prometheus
      terminationGracePeriodSeconds: 30
status:
  availableReplicas: 1
  conditions:
    - lastTransitionTime: '2021-02-02T14:54:24Z'
      lastUpdateTime: '2021-02-02T14:54:24Z'
      message: Deployment has minimum availability.
      reason: MinimumReplicasAvailable
      status: 'True'
      type: Available
    - lastTransitionTime: '2021-02-02T14:54:10Z'
      lastUpdateTime: '2021-02-02T14:56:59Z'
      message: ReplicaSet "prometheus-operator-859f6d4f97" has successfully progressed.
      reason: NewReplicaSetAvailable
      status: 'True'
      type: Progressing
  observedGeneration: 2
  readyReplicas: 1
  replicas: 1
  updatedReplicas: 1
