grafana-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: strimzi
  name: grafana
spec:
  ports:
  - name: grafana
    port: 3000
    protocol: TCP
    targetPort: 3000
  selector:
    name: grafana
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
