prometheus-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: prometheus
spec:
  ports:
  - name: web
    port: 9090
    protocol: TCP
    targetPort: web
  selector:
    prometheus: prometheus
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
