prometheus-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    openshift.io/host.generated: "true"
  name: prometheus
spec:
  host: prometheus-amq-kafka-test.apps-rp.cloudteco.com.ar
  port:
    targetPort: web
  to:
    kind: Service
    name: prometheus
    weight: 100
  wildcardPolicy: None
